--- a/public/css/prueba.css
+++ b/public/css/prueba.css
@@ -1,10 +1,52 @@
 /* =============== General Settings =========== */
 
 * {
-    font-family: "Poppins";
+    font-family: "Poppins", sans-serif;
+}
+html{
+    scroll-behavior: smooth;
 }
 
 :root {
+    /* Main theme colors */
+    --fist-color:#0e3431;
+    --second-color:#6a59d1;
+    --third-color:#777;
+    --white-color: #fff;
+    /* Hover colors */
+    --hover-color: #614fd0;
+
+    /* Background colors */
+    --body-bg-color:#fefefe;
+    --card-bg-color:#fff;
+    --modal-bg-color:#fff;
+    --bg-transparrent-color: rgba(0, 0, 0, 0.1);
+    --transparent-color-01: rgba(0, 0, 0, 0.1);
+    --transparent-color-02: rgba(106, 89, 209, 0.1);
+    --line-color:#d7d7d7;
+
+    /*  */
+
+    --color-filter:invert(1);
+
+    /* Box shadows */
+
+    --box-shadow: 0px 0px 20px rgba(0 0 0 /10%);
+
+    /* Font size */
+    --small-font-size:0.9em;
+    --normal-font-size: 1em;
+
+    /* Scroll bar colors */
+
+    --scroll-bar-color:#c5cadf;
+    --sscroll-thumb-color:#70768a;
+    --scroll-thumb-hover-color:#454f6b;
+
+
+
+
+
     --main-color-light: #6a59d1;
     --main-color-dark: #7c6cd9;
     --link-navbar-color: #757575;
@@ -12,6 +54,20 @@
 .dark{
     background-color: #1A1525;
 }
+
+body{
+    color: var(--first-color);
+    background: var(--body-bg-color);
+    transition: .5 ease;
+
+}
+
+
+
+
+
+
+
 
 /* ============= Form ================ */
 
