--- a/public/css/index.css
+++ b/public/css/index.css
@@ -795,7 +795,7 @@ a:visited {
 }
 
 /* ====================== cards  ========================*/
-#allEvents .card,
+#allEvents .card,#murales-favoritos .card,
 #murales .card,
 #eventos .card,
 #wishlist-indexevent .card,
